# ChessCPP

./: CMakeLists.txt  README.md  init.h  main.cpp
src/: Vector2Int.h  board.cpp  board.h  cell.h  figures.cpp  figures.h  main.cpp
